# terrand-contract-step2

./: .gitignore  Cargo.toml  NOTICE
.circleci/: config.yml
examples/: schema.rs
schema/: config.json  config_response.json  execute_msg.json
src/: contract.rs  error.rs  msg.rs  state.rs
